# Macro

./: .env  .env.example  AI_COMPONENT_SYSTEM.md  DATABASE_SETUP.md  TEAM_KEY_SHARING.md  env.example  index.html  package-lock.json  package.json  september_sessions_4apps.sql  tatus --porcelain  test_env.rs  vite.config.ts
macro/: ContentView.swift  Item.swift  macroApp.swift
macro.xcodeproj/: project.pbxproj
macroTests/: macroTests.swift
macroUITests/: macroUITests.swift  macroUITestsLaunchTests.swift
src/: AIAssistantPage.css  AIAssistantPage.tsx  AddMemberPage.css  AddMemberPage.tsx  AddSectionModal.css  AddSectionModal.tsx  AddTaskModal.css  AddTaskModal.tsx  AddTeamPopup.css  AddTeamPopup.tsx  App.css  App.tsx  Dashboard.css  Dashboard.tsx  Dashboard.tsx.bak  DebugPage.tsx  DetectedPage.css  DetectedPage.tsx  LogsPage.css  LogsPage.tsx  MetricBuilderPage.css  MetricBuilderPage.tsx  MonthlyCalendar.css  MonthlyCalendar.tsx  RegisterAppsPage.css  RegisterAppsPage.tsx  Sidebar.tsx  TaskDetailModal.css  TaskDetailModal.tsx  TaskPage.css  TaskPage.tsx  TaskPageNew.css  TaskPageNew.tsx  TaskPageOld.tsx  TeamsPage.css  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  current_user.rs  default_user.rs  lib.rs  main.rs
src-tauri/src/ai/: gemini.rs  mod.rs  tools.rs  traits.rs
src-tauri/src/commands/: ai_assistant.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/platform/: database_helpers.rs  factory.rs  macos_tracker.rs  mod.rs  tracking_trait.rs  windows_tracker.rs
src-tauri/src/tracking/: cross_platform_tracker.rs  mod.rs
(+10 files in other folders)
